# python_packaging_tutorial

./: .coverage  .gitignore  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
src/example_package_icarus9bly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_example.py
