[metadata]
name = example-package-icarus9bly
version = 0.0.5
author = Adi is the author
author_email = adi@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icarus9bly/python_packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/icarus9bly/python_packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    importlib-metadata
# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3
[options.packages.find]
where = src
