[metadata]
name = example-package-icarus9bly
version = 0.0.6
author = Adi is the author
author_email = adi@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/icarus9bly/python_packaging_tutorial
project_urls =
    Bug Tracker = https://github.com/icarus9bly/python_packaging_tutorial/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2
    importlib-metadata

[options.extras_require]
testing = 
    build>=0.7
    twine>=4.0
    mypy>=0.950
    flake8>=4.0
    tox>=3.0
    pytest>=7.0
    pytest-cov>=3.0

[options.package_data]
example_package = py.typed

[options.packages.find]
where = src

[flake8]
max-line-length = 150
